force-app/main/default/objects/Meeting_Attendee__c/Meeting_Attendee__c.object-meta.xml
<CustomObject>
    <description>Participant object</description>
    <label>Meeting_Attendee</label>
    <nameField>
        <label>Meeting_Attendee__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Attendee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>