force-app/main/default/objects/Meeting_Attendee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting Attendee</relationshipLabel>
    <relationshipName>Meeting_Attendees_List</relationshipName>
    <type>Lookup</type>
</CustomField>