force-app/main/default/objects/Meeting_Attendee__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting Attendee</relationshipLabel>
    <relationshipName>Meeting_Attendee</relationshipName>
    <type>Lookup</type>
</CustomField>