force-app/main/default/objects/Meeting_Attendee__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipName>Meeting_Attendee</relationshipName>
    <type>Lookup</type>
</CustomField>