force-app/main/default/objects/Meeting_Attendee__c/fields/Meeting_c__c.field-meta.xml
<CustomField>
    <fullName>Meeting_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Meeting Attendee (Meeting)</relationshipLabel>
    <relationshipName>Meeting_Attendee1</relationshipName>
    <type>Lookup</type>
</CustomField>