force-app/main/default/objects/Meeting_Attendee__c/fields/RSVP_Status__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Status__c</fullName>
    <label>RSVP Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>